--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -202,7 +202,7 @@
                                         <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn on Bluetooth" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ltF-WJ-8PS">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn on Wi-Fi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ltF-WJ-8PS">
                                         <rect key="frame" x="30" y="30" width="315" height="35"/>
                                         <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="30"/>
                                         <nil key="highlightedColor"/>
@@ -617,7 +617,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1N8-Qq-TRU">
-                                <rect key="frame" x="161.5" y="319.5" width="53" height="29.5"/>
+                                <rect key="frame" x="162" y="319" width="53" height="29.5"/>
                                 <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="25"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.80380097517730498" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
